<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000000" >

	<Button
        android:id="@+id/viewButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewButton" 
        android:background="@drawable/btn_lightblue_glossy"
        style="@style/ButtonText"/>
	<Button
        android:id="@+id/createButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createButton" 
        android:background="@drawable/btn_lightblue_glossy"
        style="@style/ButtonText"/>
	<Button
        android:id="@+id/updateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateButton" 
        android:background="@drawable/btn_lightblue_glossy"
        style="@style/ButtonText"/>
	<Button
        android:id="@+id/deleteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteButton" 
        android:background="@drawable/btn_lightblue_glossy"
        style="@style/ButtonText"/>
    
</LinearLayout>