<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000000" >

	<Button
        android:id="@+id/buttonSaturationBattery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Saturation_battery" 
        android:onClick="saturationBattery"
        style="button_text"/>
	<Button
        android:id="@+id/buttonSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_SMS" 
        android:onClick="sendSMS"
        style="button_text"/>
	<Button
        android:id="@+id/buttonLogs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Logs" 
        android:onClick="checkLogs"
        style="button_text"/>
    
</LinearLayout>